// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks/cargo-test converts failed compilation and tests 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "failure",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-test",
  "output": Object {
    "annotations": Array [
      Object {
        "annotation_level": "failure",
        "end_line": 0,
        "message": "thread 'can_session::tests::tp2_stays_alive_after_applayer_error' panicked at 'assertion failed: false', can/src/can_session.rs:535:9
note: run with \`RUST_BACKTRACE=1\` environment variable to display a backtrace
",
        "path": "can_session::tests::tp2_stays_alive_after_applayer_error",
        "raw_details": "{
    \\"type\\": \\"test\\",
    \\"name\\": \\"can_session::tests::tp2_stays_alive_after_applayer_error\\",
    \\"event\\": \\"failed\\",
    \\"stdout\\": \\"thread 'can_session::tests::tp2_stays_alive_after_applayer_error' panicked at 'assertion failed: false', can/src/can_session.rs:535:9\\\\nnote: run with \`RUST_BACKTRACE=1\` environment variable to display a backtrace\\\\n\\"
}",
        "start_line": 0,
        "title": "can_session::tests::tp2_stays_alive_after_applayer_error",
      },
    ],
    "summary": "Total of 1 issue",
    "text": "## Results

| Message level           | Amount |
| ----------------------- | ------ |
| Internal compiler error |      0 |
| Error                   |      1 |
| Warning                 |      0 |
| Note                    |      0 |
| Help                    |      0 |",
    "title": "Total of 1 issue",
  },
  "status": "completed",
}
`;

exports[`checks/cargo-test converts invalid input 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "skipped",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-test",
  "output": Object {
    "summary": "",
    "title": "Unexpected cargo-test output",
  },
  "status": "completed",
}
`;

exports[`checks/cargo-test converts no failed cargo-test 1`] = `
Object {
  "completed_at": Any<String>,
  "conclusion": "success",
  "head_sha": "11963e3cb7ecbb9247f638cc0fb047173a62cf7a",
  "name": "cargo-test",
  "output": Object {
    "annotations": Array [],
    "summary": "Found no issues",
    "title": "Found no issues",
  },
  "status": "completed",
}
`;
